--- a/profile.html
+++ b/profile.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <title>Lab 3</title>
-    </head>
-    <body>
-        <p>A2</p>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Web Page</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <!-- Change display between Miss Pink Elf and Spiderman details -->
+    <p> Elysia Details </p>
+    <p> Change to <a href="newIndex.html">Spiderman Details</a></p>
+    <img
+      src="https://static.wikia.nocookie.net/hoducks/images/4/42/Miss_Pink_Elf.png/revision/latest?cb=20240212200849"
+      alt="Logo"
+    />
+    <div>
+      <p>Details about Elysia</p>
+      <ul>
+        <li>Full Name: Elysia</li>
+        <li>Alias: Miss Pink Elf</li>
+        <li>Origin: Honkai Impact 3rd</li>
+        <li>Role: Playable Character</li>
+      </ul>
+    </div>
+  </body>
 </html>
