--- a/CAMTInfo.html
+++ b/CAMTInfo.html
@@ -5,7 +5,6 @@
         <title>Lab 3</title>
     </head>
     <body>
-        <a href="./profile.html">profile</a>
-        <a href="./CAMTInfo.html">CAMT</a>
+        <a href="https://www.camt.cmu.ac.th/">CAMT</a>
     </body>
 </html>
