--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <a href="./profile.html">profile</a>
         <a href="./CAMTInfo.html">CAMT</a>
+        <p>To be continued</p>
     </body>
 </html>
