--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <a href="./profile.html">profile</a>
+        <a href="./friend.html">friend</a>
     </body>
 </html>
