--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <a href="./profile.html">profile</a>
-        <a href="./friend.html">friend</a>
+        <a href="./friend.html"><img src="img.jpg" width="500" height="600"></a>
     </body>
 </html>
