--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <body>
         <a href="./profile.html">profile</a>
         <a href="./friend.html"><img src="img.jpg" width="500" height="600"></a>
-        <a href="./CAMTInfo.html">CAMT</a>
+        <a href="./CAMTInfo.html"><img src="./Unbenannt.png" alt="CAMT Logo"></a>
     </body>
 </html>
